--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .header h1 {
-    display: inline-block;
+    display:block;
     font-size: 48px;
 }
 
@@ -37,7 +37,7 @@ body {
 }
 
 .header nav ul li {
-    display: inline-block;
+    display:block;
     margin-left: 25px;
 }
 
